--- a/jumbotron/jumbotron.css
+++ b/jumbotron/jumbotron.css
@@ -2,3 +2,9 @@
 body {
   padding-top: 3.5rem;
 }
+
+.jumbotron {
+color: #ffffff;
+height: 500px;
+background-image: url("img.jpg");
+background-size: cover;}
